#VERSION 0.7.98#

*  Peak_View_Theme > added method folder(). It set the theme folder name to use. 
                     Tweaked Peak_View::theme() to use this new functionnality

*  Peak_Registry > deprecated method obj() in favor of method shorcut o()

*  Peak_Application_Modules > simplified method run(). It now call Peak_Application run method instead of 
                              trying to emulate his job

*  Peak_Router > added method reset(). Ensure that the router vars are clean before using getResquestUri()

*  Peak_Core > lighten the file by moving/deling methods getModules(), getModule(), getCachedModules()
               and property $_modules


#VERSION 0.7.97#

*  Peak_Core > method initModule() moved to a new extension file(Peak_Core_Extension_Modules) and renamed init()

*  added Peak_Core_Extensions derived from Peak_Helpers, ext() method simplified in Peak_Core 
   and moved extensions in Peak/Core/Extension

*  Peak_Core > Peak_Configs is stored in Peak_Registry under the name of 'core_config'

*  added Peak_Application_Modules > allow to create/use complet modules application inside application
                                    
*  Peak_Core > added methods init(), initApp() and initModules(). Removed methods setPath() and getPaths().
               modified getPath() to point to new Peak_Config object.
               A lot of files was affected by this change because we replace a lot of php constants by
               Peak_Core::getPath() static method (boot, autoload, Controller, Controller Helpers, 
               View, View Helpers, View Render Partials/Layouts and View theme)

*  added Peak_Config > this new class allow core paths configuration to be overdriven and get rid of all paths constants

*  Peak_Router > minor fix to method getRequestURI()

*  Peak_View_Helper deleted, no more usefull since Peak_View_Helpers accomplish the same.
   Important change: View Helpers don't have to extends anymore this class.
