@@ -8,10 +8,15 @@
  */
 abstract class Peak_Application_Modules
 {
-	   
+
+	private   $_ctrl_name = '';
+	
     protected $_module_name = '';
-    private   $_ctrl_name = '';
-         
+    
+    protected $_module_path = '';
+    
+    protected $_internal = false;
+        
     /**
      * Get the name of child class and use it as the module name
      * Prepare core to run a module
@@ -19,15 +24,21 @@ abstract class Peak_Application_Modules
      */
     public function __construct()
     {   
-    	//ctrl name
-    	$this->_ctrl_name = str_ireplace('controller','',get_class($this));     	  	
+    	/*//ctrl name
+    	$this->_ctrl_name = str_ireplace('controller','',get_class($this));     
+    		  	
         //module name
         if(empty($this->_module_name)) $this->_module_name = $this->_ctrl_name;
+        
+        //module path
+        if(empty($this->_module_path)) $this->_module_path = Peak_Core::getPath('modules');
         
         if(!(Peak_Registry::o()->core->isModule($this->_module_name))) die('Application modules '.$this->_module_name.' not found');
 
         //overdrive application paths to modules folder with Peak_Core_Extension_Modules
-        Peak_Registry::o()->core->modules()->init($this->_module_name);
+        Peak_Registry::o()->core->modules()->init($this->_module_name);*/
+    	
+    	$this->prepare();
               
         //initialize module bootstrap
         if(file_exists(Peak_Core::getPath('application').'/bootstrap.php')) {
@@ -38,6 +49,28 @@ abstract class Peak_Application_Modules
         {
         	$this->bootstrap = new $bootstrap_class();
         }
+    }
+    
+    protected function prepare()
+    {
+    	if(!($this->_internal))
+    	{
+    		//ctrl name
+    		$this->_ctrl_name = str_ireplace('controller','',get_class($this));
+    		$this->_module_path = null;
+    	}
+    	else {
+    		//ctrl name
+    		$this->_ctrl_name = str_ireplace('Peak_Controller_Internal_','',get_class($this));
+    		$this->_module_path = LIBRARY_ABSPATH.'/Peak/Application/'.$this->_ctrl_name;
+    	}
+    	//module name
+    	if(empty($this->_module_name)) $this->_module_name = $this->_ctrl_name;
+
+    	//if(!(Peak_Registry::o()->core->isModule($this->_module_name))) die('Application modules '.$this->_module_name.' not found');
+
+    	//overdrive application paths to modules folder with Peak_Core_Extension_Modules
+    	Peak_Registry::o()->core->modules()->init($this->_module_name,$this->_module_path);
     }
       
     
